cmake_minimum_required(VERSION 3.10)

project (RenderDoosDemo)


set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_PDB_OUTPUT_DIRECTORY     "${CMAKE_CURRENT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(fltk)
add_subdirectory(RenderDoos)
add_subdirectory(RenderCube)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if (FLTK_BUILD_TEST)
set_target_properties (adjuster PROPERTIES FOLDER fltk)
set_target_properties (animated PROPERTIES FOLDER fltk)
set_target_properties (arc PROPERTIES FOLDER fltk)
set_target_properties (ask PROPERTIES FOLDER fltk)
set_target_properties (bitmap PROPERTIES FOLDER fltk)
set_target_properties (blocks PROPERTIES FOLDER fltk)
set_target_properties (boxtype PROPERTIES FOLDER fltk)
set_target_properties (browser PROPERTIES FOLDER fltk)
set_target_properties (button PROPERTIES FOLDER fltk)
set_target_properties (buttons PROPERTIES FOLDER fltk)
set_target_properties (cairo_test PROPERTIES FOLDER fltk)
set_target_properties (checkers PROPERTIES FOLDER fltk)
set_target_properties (clock PROPERTIES FOLDER fltk)
set_target_properties (colbrowser PROPERTIES FOLDER fltk)
set_target_properties (color_chooser PROPERTIES FOLDER fltk)
set_target_properties (cube PROPERTIES FOLDER fltk)
set_target_properties (CubeView PROPERTIES FOLDER fltk)
set_target_properties (cursor PROPERTIES FOLDER fltk)
set_target_properties (curve PROPERTIES FOLDER fltk)
set_target_properties (demo PROPERTIES FOLDER fltk)
set_target_properties (device PROPERTIES FOLDER fltk)
set_target_properties (doublebuffer PROPERTIES FOLDER fltk)
set_target_properties (editor PROPERTIES FOLDER fltk)
set_target_properties (fast_slow PROPERTIES FOLDER fltk)
set_target_properties (file_chooser PROPERTIES FOLDER fltk)
set_target_properties (fltk-versions PROPERTIES FOLDER fltk)
set_target_properties (fonts PROPERTIES FOLDER fltk)
set_target_properties (forms PROPERTIES FOLDER fltk)
set_target_properties (fractals PROPERTIES FOLDER fltk)
set_target_properties (fullscreen PROPERTIES FOLDER fltk)
set_target_properties (gl_overlay PROPERTIES FOLDER fltk)
set_target_properties (glpuzzle PROPERTIES FOLDER fltk)
set_target_properties (handle_events PROPERTIES FOLDER fltk)
set_target_properties (hello PROPERTIES FOLDER fltk)
set_target_properties (help_dialog PROPERTIES FOLDER fltk)
set_target_properties (icon PROPERTIES FOLDER fltk)
set_target_properties (iconize PROPERTIES FOLDER fltk)
set_target_properties (image PROPERTIES FOLDER fltk)
set_target_properties (inactive PROPERTIES FOLDER fltk)
set_target_properties (input PROPERTIES FOLDER fltk)
set_target_properties (input_choice PROPERTIES FOLDER fltk)
set_target_properties (keyboard PROPERTIES FOLDER fltk)
set_target_properties (label PROPERTIES FOLDER fltk)
set_target_properties (line_style PROPERTIES FOLDER fltk)
set_target_properties (list_visuals PROPERTIES FOLDER fltk)
set_target_properties (mandelbrot PROPERTIES FOLDER fltk)
set_target_properties (menubar PROPERTIES FOLDER fltk)
set_target_properties (message PROPERTIES FOLDER fltk)
set_target_properties (minimum PROPERTIES FOLDER fltk)
set_target_properties (native-filechooser PROPERTIES FOLDER fltk)
set_target_properties (navigation PROPERTIES FOLDER fltk)
set_target_properties (offscreen PROPERTIES FOLDER fltk)
set_target_properties (output PROPERTIES FOLDER fltk)
set_target_properties (overlay PROPERTIES FOLDER fltk)
set_target_properties (pack PROPERTIES FOLDER fltk)
set_target_properties (pixmap PROPERTIES FOLDER fltk)
set_target_properties (pixmap_browser PROPERTIES FOLDER fltk)
set_target_properties (preferences PROPERTIES FOLDER fltk)
set_target_properties (radio PROPERTIES FOLDER fltk)
set_target_properties (resize PROPERTIES FOLDER fltk)
set_target_properties (resizebox PROPERTIES FOLDER fltk)
set_target_properties (resize-example1 PROPERTIES FOLDER fltk)
set_target_properties (resize-example2 PROPERTIES FOLDER fltk)
set_target_properties (resize-example3a PROPERTIES FOLDER fltk)
set_target_properties (resize-example3b PROPERTIES FOLDER fltk)
set_target_properties (resize-example3c PROPERTIES FOLDER fltk)
set_target_properties (resize-example4a PROPERTIES FOLDER fltk)
set_target_properties (resize-example4b PROPERTIES FOLDER fltk)
set_target_properties (rotated_text PROPERTIES FOLDER fltk)
set_target_properties (scroll PROPERTIES FOLDER fltk)
set_target_properties (shape PROPERTIES FOLDER fltk)
set_target_properties (subwindow PROPERTIES FOLDER fltk)
set_target_properties (sudoku PROPERTIES FOLDER fltk)
set_target_properties (symbols PROPERTIES FOLDER fltk)
set_target_properties (table PROPERTIES FOLDER fltk)
set_target_properties (tabs PROPERTIES FOLDER fltk)
set_target_properties (threads PROPERTIES FOLDER fltk)
set_target_properties (tile PROPERTIES FOLDER fltk)
set_target_properties (tiled_image PROPERTIES FOLDER fltk)
set_target_properties (tree PROPERTIES FOLDER fltk)
set_target_properties (twowin PROPERTIES FOLDER fltk)
set_target_properties (unittests PROPERTIES FOLDER fltk)
set_target_properties (utf8 PROPERTIES FOLDER fltk)
set_target_properties (valuators PROPERTIES FOLDER fltk)
set_target_properties (windowfocus PROPERTIES FOLDER fltk)
endif (FLTK_BUILD_TEST)

set_target_properties (fltk PROPERTIES FOLDER fltk)
set_target_properties (fltk_forms PROPERTIES FOLDER fltk)
set_target_properties (fltk_gl PROPERTIES FOLDER fltk)
set_target_properties (fltk_images PROPERTIES FOLDER fltk)
set_target_properties (fltk_jpeg PROPERTIES FOLDER fltk)
if (WIN32)
set_target_properties (fltk_png PROPERTIES FOLDER fltk)
set_target_properties (fltk_z PROPERTIES FOLDER fltk)
endif (WIN32)
set_target_properties (fluid PROPERTIES FOLDER fltk)
set_target_properties (uninstall-fltk PROPERTIES FOLDER fltk)
